--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
 </head>
+
 <body>
     <h1>Lasagna</h1>
     <img src="images/lasagna.jpeg" alt="Lasagna">
@@ -42,36 +44,96 @@
 
     <h2>Steps</h2>
     <ol>
-        <li>Cook sausage, ground beef, onion, and garlic in a 
-            Dutch oven over medium heat until well browned. Stir 
-            in crushed tomatoes, tomato sauce, tomato paste, and 
-            water. Season with sugar, 2 tablespoons parsley, basil, 
-            1 teaspoon salt, Italian seasoning, fennel seeds, and 
-            pepper. Simmer, covered, for about 1 1/2 hours, stirring 
+        <li>Cook sausage, ground beef, onion, and garlic in a
+            Dutch oven over medium heat until well browned. Stir
+            in crushed tomatoes, tomato sauce, tomato paste, and
+            water. Season with sugar, 2 tablespoons parsley, basil,
+            1 teaspoon salt, Italian seasoning, fennel seeds, and
+            pepper. Simmer, covered, for about 1 1/2 hours, stirring
             occasionally.</li>
-            
-        <li>Bring a large pot of lightly salted water to a boil. 
-            Cook lasagna noodles in boiling water for 8 to 10 
-            minutes. Drain noodles, and rinse with cold water. In a 
-            mixing bowl, combine ricotta cheese with egg, remaining 
+
+        <li>Bring a large pot of lightly salted water to a boil.
+            Cook lasagna noodles in boiling water for 8 to 10
+            minutes. Drain noodles, and rinse with cold water. In a
+            mixing bowl, combine ricotta cheese with egg, remaining
             2 tablespoons parsley, and 1/2 teaspoon salt.</li>
 
         <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
 
-        <li>To assemble, spread 1 1/2 cups of meat sauce in the 
-            bottom of a 9x13-inch baking dish. Arrange 6 noodles 
-            lengthwise over meat sauce. Spread with 1/2 of the 
-            ricotta cheese mixture. Top with 1/3 of the mozzarella 
-            cheese slices. Spoon 1 1/2 cups meat sauce over 
-            mozzarella, and sprinkle with 1/4 cup Parmesan cheese. 
-            Repeat layers, and top with remaining mozzarella and 
-            Parmesan cheese. Cover with foil: to prevent sticking, 
-            either spray foil with cooking spray or make sure the foil 
+        <li>To assemble, spread 1 1/2 cups of meat sauce in the
+            bottom of a 9x13-inch baking dish. Arrange 6 noodles
+            lengthwise over meat sauce. Spread with 1/2 of the
+            ricotta cheese mixture. Top with 1/3 of the mozzarella
+            cheese slices. Spoon 1 1/2 cups meat sauce over
+            mozzarella, and sprinkle with 1/4 cup Parmesan cheese.
+            Repeat layers, and top with remaining mozzarella and
+            Parmesan cheese. Cover with foil: to prevent sticking,
+            either spray foil with cooking spray or make sure the foil
             does not touch the cheese.</li>
 
-        <li>Bake in the preheated oven for 25 minutes. Remove the 
-            foil and bake for an additional 25 minutes. 
+        <li>Bake in the preheated oven for 25 minutes. Remove the
+            foil and bake for an additional 25 minutes.
             Rest lasagna for 15 minutes before serving.</li>
     </ol>
+
+    <h1>Honey Glazed Chicken</h1>
+    <img src="images/HoneyChicken.jpeg" alt="Honey Glazed Chicken">
+    <h2>Description</h2>
+    <p>This recipe is relevantly easy to make. It does not need a lot of ingredients and can be made in a few steps.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>¼ cup honey</li>
+        <li>2 tablespoons soy sauce</li>
+        <li>⅛ teaspoon red pepper flakes</li>
+        <li>1 ½ tablespoons olive oil</li>
+        <li>2 skinless, boneless chicken breast halves, cut into bite-size pieces</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Whisk honey, soy sauce, and red pepper flakes in a bowl; set aside.</li>
+
+        <li>Heat olive oil in a skillet over medium heat; cook and stir chicken in hot oil until lightly brown, about 5
+            minutes.</li>
+
+        <li>Pour honey mixture into the skillet; continue to cook and stir until chicken is no longer pink in the center
+            and sauce is thickened, about 5 minutes more.</li>
+    </ol>
+
+    <h1>Sirloin Steak with Garlic Butter</h1>
+    <img src="images/sirloin.jpeg" alt="Honey Glazed Chicken">
+    <h2>Description</h2>
+    <p>This sirloin steak recipe is served with very garlicky butter that makes this steak melt-in-your-mouth wonderful!
+        I have never tasted any other steak that came even close to this recipe. If you are having steak, don't skimp on
+        flavor to save a few calories.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>½ cup butter</li>
+        <li>4 cloves garlic, minced</li>
+        <li>2 teaspoons garlic powder</li>
+        <li>4 pounds beef top sirloin steaks</li>
+        <li>salt and pepper to taste</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat an outdoor grill for high heat and lightly oil the grate.</li>
+
+        <li>Melt butter in a small saucepan over medium-low heat; stir in minced garlic and garlic powder. Set aside.
+        </li>
+
+        <li>Season both sides of each steak with salt and pepper.</li>
+
+        <li>Place steaks on preheated grill and cook 4 to 5 minutes per side. An instant-read thermometer inserted into
+            the center should read 140 degrees F (60 degrees C) for medium doneness.</li>
+
+        <li>Transfer steaks to warmed plates; brush the tops liberally with garlic butter and allow to rest for 2 to 3
+            minutes before serving.</li>
+    </ol>
 </body>
+
 </html>
