--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    
+    <li><a href="recipes/HoneyGlazedChicken.html">Honey Glazed Chicken</a></li>
+    
+    <li><a href="recipes/SirloinSteak.html">Sirloin Steak with Garlic Butter</a></li>
+    </ul>
 </body>
 </html>
